--- a/app/stylesheets/sass/base/_helpers.sass
+++ b/app/stylesheets/sass/base/_helpers.sass
@@ -176,7 +176,7 @@
 
 // Floats
 .right
-  float: right
+  float: right !important
 
 .left
   float: left
