--- a/app/stylesheets/sass/modules/_m-counter-down.sass
+++ b/app/stylesheets/sass/modules/_m-counter-down.sass
@@ -22,7 +22,7 @@
   +media($mobile)
     height: 35px
     padding: 0
-    float: right
+    // float: right
 
 .m-counter-down--call
   font-size: 16px
